<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wakeD</string>
    <string name="action_settings">Settings</string>
    <string name="ArtistTextView">Artist</string>
    <string name="agoText"> ago</string>
    <string name="defaultRefreshString">0 minutes</string>
    <string name="defaultDateWeatherString">January 1, 1970</string>
    <string name="refreshButtonContentDesc">Button to refresh weather data</string>
    <string name="weatherImageContentDesc">weather image</string>
    <string name="tempImageContentDesc">weatherIconImage</string>
    <string name="windImageIconDesc">windImageIcon</string>
    <string name="noInternetConn">No internet Connection</string>
    <string name="editAlarmTitle">Edit alarm title</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturaday</string>
    <string name="sunday">Sunday</string>
    <string name="imageOfArtist">Image of Artist</string>
    <string name="enterTitleHere">Enter title here...</string>
    <string name="title">Title</string>
    <string name="versionBeta">Version 1.0 Beta</string>
    <string name="sendFeedback">Send Feedback : info@cikoapps.com</string>
    <string name="rateApp">Rate App</string>
    <string name="musicProvidedBy">All music provided by :</string>
    <string name="stop">Stop</string>
    <string name="connectToWifi">Connect to Wi-Fi, or allow app to use cellular network in settings</string>
    <string name="dismiss">Dismiss</string>
    <string name="newAlarm">New Alarm</string>
    <string name="editAlarm">Edit Alarm</string>
    <string name="selectRingtone">Select Ringtone</string>
    <string name="Settings">Settings</string>
    <string name="ringtone">Ringtone</string>
    <string name="useFahrenheit">Use Fahrenheit</string>
    <string name="albumArtist">Album artist</string>
    <string name="alarmTitle">AlarmTitle</string>
    <string name="playlistInfo">Playlist info</string>
    <string name="defaultCelsius">Default value Celsius</string>
    <string name="defaultRingtone">Default ringtone</string>
    <string name="repeatAlarm">Repeat Alarm</string>
    <string name="mondayShort">Mo</string>
    <string name="tuesdayShort">Tu</string>
    <string name="wednesdayShort">We</string>
    <string name="thursdayShort">Th</string>
    <string name="fridayShort">Fr</string>
    <string name="saturdayShort">Sa</string>
    <string name="sundayShort">Su</string>
    <string name="yes">Yes</string>
    <string name="threeDots">...</string>
    <string name="blankYes">Yes</string>
    <string name="blankNo">No</string>
    <string name="doNotUseWeather">Do not use weather forecast service</string>
    <string name="clockMidnight">00:00</string>
    <string name="useMiles">Use Miles per hour</string>
    <string name="defaultKilometers">Default value kilometer per hour</string>
    <string name="empty" />
    <string name="notSelected">Not selected</string>
    <string name="weatherRefreshRate">Weather Refresh rate</string>
    <string name="minutes10">10 minutes</string>
    <string name="alarmVolume">Alarm Volume</string>
    <string name="deezerAccount">Deezer Account</string>
    <string name="disconnect">Disconnect</string>
    <string name="about">About</string>

</resources>