<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_waked_black" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/versionBeta"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/sendFeedback"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/rateApp"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/musicProvidedBy"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/deezerLogoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/music"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_deezer_logo" />
</RelativeLayout>