<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar_edit_alarm" />

    <TextView
        android:id="@+id/alarmTitleTextView"
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:layout_below="@+id/appBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:ellipsize="end"
        android:gravity="center_vertical|center_horizontal"
        android:maxLines="1"
        android:maxWidth="320dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:singleLine="true"
        android:text="Title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/ringtoneText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/setRingtoneTextView"
        android:layout_alignStart="@+id/setRingtoneTextView"
        android:layout_below="@+id/timeTextView"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/ringtone"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/setRingtoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup"
        android:layout_below="@+id/ringtoneText"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:maxWidth="180dp"
        android:singleLine="true"
        android:text="@string/defaultRingtone"
        android:textColor="@color/colorPrimaryText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/repeatAlarmText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignLeft="@+id/setRingtoneTextView"
        android:layout_alignStart="@+id/setRingtoneTextView"
        android:layout_below="@+id/setRingtoneTextView"
        android:gravity="center_vertical"
        android:text="@string/repeatAlarm"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />


    <ImageButton
        android:id="@+id/editRingtone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/setRingtoneTextView"
        android:layout_toEndOf="@+id/setRingtoneTextView"
        android:layout_toRightOf="@+id/setRingtoneTextView"
        android:background="@color/colorTransparent"
        android:padding="12dp"
        android:src="@drawable/ic_edit"
        android:theme="@style/Base.Widget.AppCompat.ActionBar.Solid" />

    <com.shamanland.fab.FloatingActionButton
        android:id="@+id/confirmAlarmAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:elevation="5dp"
        android:src="@drawable/ic_confirm"
        tools:ignore="RelativeOverlap" />

    <com.shamanland.fab.FloatingActionButton
        android:id="@+id/cancelAlarmAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:elevation="5dp"
        android:src="@drawable/ic_cancel"
        tools:ignore="UnusedAttribute" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/repeatAlarmText"
        android:layout_alignLeft="@+id/cancelAlarmAdd"
        android:layout_alignStart="@+id/cancelAlarmAdd"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/radioButtonYes"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignLeft="@+id/repeatAlarmText"
            android:layout_alignStart="@+id/repeatAlarmText"
            android:layout_below="@+id/repeatAlarmText"
            android:paddingBottom="8dp"
            android:paddingRight="8dp"
            android:button="@drawable/material_radio_btn"
            android:paddingTop="8dp"
            android:text="@string/yes"
            android:layout_marginRight="4dp"
            android:checked="false"
            tools:ignore="ObsoleteLayoutParam" />

        <RadioButton
            android:id="@+id/radioButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/repeatAlarmText"
            android:layout_toEndOf="@+id/radioButtonYes"
            android:layout_toRightOf="@+id/radioButtonYes"
            android:checked="true"
            android:paddingBottom="8dp"
            android:paddingRight="8dp"
            android:button="@drawable/material_radio_btn"
            android:paddingTop="8dp"
            android:text="@string/blankNo"
            tools:ignore="ObsoleteLayoutParam" />

    </RadioGroup>

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_below="@+id/alarmTitleTextView"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:maxLines="1"
        android:maxWidth="250dp"
        android:minHeight="48dp"
        android:text="@string/clockMidnight"
        android:textColor="@color/colorPrimaryText"
        android:textSize="32sp" />

</RelativeLayout>